Require a maintained version of libgcrypt.

* configure.ac: Require libgpg-error 1.25 and Libgcrypt 1.8
* src/util.h: Add missing error codes up to libgpg-error 1.27
--

Libgcrypt 1.7 reached EOL a year ago, thus we should not make such an
old version a requirement.

Libgpg-error was moderately updated to be in sync with the forthcoming
GnuPG 2.2.21.

GnuPG-bug-id: 4962
Signed-off-by: Werner Koch <wk@gnupg.org>